[package]
name = "wireguard-hole-punching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.4", features = ["derive"] }
clap_complete = "4.3.1"
serde = { version = "1.0.164", features = ["derive"] }
